--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*use this to get rid of weird margins*/
+body{
+    background-color: #e2e1e1;
+    margin: 0px;
+    height: 100%;
+    width: 100%;
+}
