--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html>
-<header>
-  <div class="container">
-    <a routerLink="/" class="logo">apptitle</a>
-    <nav>
-      <ul>
-        <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/logout">Log Out</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-
-</html>
+<app-nav></app-nav>
+<section>
+  <router-outlet></router-outlet>
+</section>
