create login box. not hooked up to open connect ID

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,7 +8,7 @@
                 <mat-toolbar-row>
                     <span> <a routerLink="/">Codefucius</a></span>
                     <span class="header"></span>
-                    <mat-icon class="header-button" aria-hidden="false" aria-label=""></mat-icon>
+                    <!--<mat-icon class="header-button" aria-hidden="false" aria-label=""></mat-icon>-->
 
                     <button mat-raised-button>Log Out</button>
                 </mat-toolbar-row>
