Formatted the Landing Page

--- a/src/app/reviewee/reviewee.component.html
+++ b/src/app/reviewee/reviewee.component.html
@@ -1,3 +1,57 @@
-<p>
-  reviewee works!
-</p>
+<html>
+    <h1 id="title">Welcome</h1>
+    <div id="cardBox">
+        <mat-card class="reviewee-card">
+            <mat-card-header>
+            <mat-card-content class="amount">
+                <p><b>4</b></p>
+            </mat-card-content>
+            </mat-card-header>
+            <h1>Awaiting</h1>
+            <i class="material-icons">
+                keyboard_arrow_down
+            </i> 
+        </mat-card>
+
+        <mat-card class="reviewee-card2">
+            <mat-card-header>
+            <mat-card-content class="amount">
+                <p><b>6</b></p>
+            </mat-card-content>
+            </mat-card-header>
+            <h1>In Progress</h1>
+            <i class="material-icons">
+                keyboard_arrow_down
+            </i> 
+        </mat-card>
+
+        <mat-card class="reviewee-card3">
+            <mat-card-header>
+            <mat-card-content class="amount">
+                <p><b>5</b></p>
+            </mat-card-content>
+            </mat-card-header>
+            <h1>Completed</h1>
+            <i class="material-icons">
+                keyboard_arrow_down
+            </i> 
+        </mat-card>
+
+        <mat-card class="reviewee-card4">
+            <mat-card-header>
+            <mat-card-content class="amount">
+                <p><b>10</b></p>
+            </mat-card-content>
+            </mat-card-header>
+            <h1>Review Hours</h1>
+            <i class="material-icons">
+                keyboard_arrow_down
+            </i> 
+        </mat-card>
+    </div>
+    <button mat-icon-button>
+      <i class="material-icons">
+          add
+      </i>
+  </button>
+  </html>
