--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,3 +1,36 @@
-<p>
-  manager works!
-</p>
+<html>
+  <h1 id="title">Welcome</h1>
+  <div id="employeeBox">
+
+    <mat-form-field id="searchBox">
+      <mat-label>Search</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. John Smith">
+    </mat-form-field>
+
+    <table mat-table [dataSource]="dataSource">
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef> Role </th>
+        <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="reviewHours">
+        <th mat-header-cell *matHeaderCellDef> Code Review Hours </th>
+        <td mat-cell *matCellDef="let element"> {{element.reviewHours}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="completedReviews">
+        <th mat-header-cell *matHeaderCellDef> Complete Code Reviews </th>
+        <td mat-cell *matCellDef="let element"> {{element.completedReviews}} </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+</html>
