created the theme and animation for table

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -10,7 +10,7 @@
                     <span class="header"></span>
                     <!--<mat-icon class="header-button" aria-hidden="false" aria-label=""></mat-icon>-->
 
-                    <button mat-raised-button>Log Out</button>
+                    <button mat-raised-button color="accent">Log Out</button>
                 </mat-toolbar-row>
             </mat-toolbar>
         </nav>
