--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,6 @@
 .login-card {
     max-width: 400px;
-
+    height: 200px;
     width: 75%;
     margin: 5% auto;
 }
@@ -13,4 +13,10 @@
       
 .box-full-width {
     width: 100%;
+}
+
+button{
+    float: right;
+    cursor: pointer;
+    position: relative;
 }
