added slide down animation on table

--- a/src/app/reviewee/reviewee.component.html
+++ b/src/app/reviewee/reviewee.component.html
@@ -1,6 +1,7 @@
 <html>
     <h1 id="title">Welcome</h1>
     <div id="cardBox">
+
         <mat-card class="reviewee-card" (click)="toggle()">
             <mat-card-header>
             <mat-card-content class="amount">
@@ -13,7 +14,7 @@
             </i> 
         </mat-card>
 
-        <mat-card class="reviewee-card2" (click)="toggle()">
+        <mat-card class="reviewee-card" (click)="toggle()">
             <mat-card-header>
             <mat-card-content class="amount">
                 <p><b>6</b></p>
@@ -25,7 +26,7 @@
             </i> 
         </mat-card>
 
-        <mat-card class="reviewee-card3" (click)="toggle()">
+        <mat-card class="reviewee-card" (click)="toggle()">
             <mat-card-header>
             <mat-card-content class="amount">
                 <p><b>5</b></p>
@@ -37,7 +38,7 @@
             </i> 
         </mat-card>
 
-        <mat-card class="reviewee-card4" (click)="toggle()">
+        <mat-card class="reviewee-card" (click)="toggle()">
             <mat-card-header>
             <mat-card-content class="amount">
                 <p><b>10</b></p>
@@ -78,7 +79,6 @@
         </table>
     </div>
 
-
     <button mat-icon-button>
       <i class="material-icons">
           add
@@ -86,3 +86,4 @@
   </button>
 
 </html>
+
