--- a/src/app/reviewee/reviewee.component.css
+++ b/src/app/reviewee/reviewee.component.css
@@ -1,33 +1,34 @@
 #awaitingChart{
     background:#004d40;
     height: 45%;
-    width: 40%;
-    position: absolute;
+    width: 40%; 
+    position: absolute; 
     margin-left: 5%;
     width: 90%;
     background-color: #004d40;
-    /* display: none; */
+    overflow: hidden;
 }
 
-#cardBox{
+#cardBox {
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
 }
 
-.reviewee-card, .reviewee-card2, .reviewee-card3, .reviewee-card4 {
+.reviewee-card {
     max-width: 200px;
-    max-height: 200 px;
+    max-height: 200px;
     display: flex;
     flex-direction: column;
     flex: 1;
     margin: 3%;
     margin-top: 0px;
     background-color: #80CBC4;
+    cursor: pointer;
     }
 
-.reviewee-card:hover, .reviewee-card2:hover, .reviewee-card3:hover, .reviewee-card4:hover {
+.reviewee-card:hover{
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     }
 
