--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+/*@import '~@angular/material/theming';
 
 @include mat-core();
 
@@ -7,4 +7,4 @@ $app-accent: mat-palette($mat-teal, 200);
 
 $app-theme: mat-light-theme($app-primary, $app-accent);
 
-@include angular-material-theme($app-theme);
+@include angular-material-theme($app-theme);*/
