--- a/src/app/code-request/code-request.component.html
+++ b/src/app/code-request/code-request.component.html
@@ -31,8 +31,8 @@
 
         <div class="button-row">
             <mat-card-actions>
-                <button mat-button>Submit</button>
-                <button mat-button>Cancel</button>
+                <button mat-button id="Submit">Submit</button>
+                <button mat-button id="Cancel">Cancel</button>
             </mat-card-actions>
         </div>
     </mat-card-content>
