--- a/src/app/reviewer/reviewer.component.scss
+++ b/src/app/reviewer/reviewer.component.scss
@@ -61,6 +61,7 @@ button{
     width:5%;
     height:8%;
     position:fixed;
+    z-index: 100;
     bottom: 4%;
     right: 5%;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
