--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,8 @@
 /*use this to get rid of weird margins*/
 body{
     background-color: #e2e1e1;
-    margin: 0px;
+    margin: 0;
+    padding: 0;
     height: 100%;
     width: 100%;
 }
