--- a/src/app/reviewer/reviewer.component.scss
+++ b/src/app/reviewer/reviewer.component.scss
@@ -136,3 +136,12 @@ button{
 .endTime{
     margin-left: 5%;
 }
+
+/*
+.mat-dialog-container {
+    border: none !important;
+    padding: none !important;
+    background: #999999;
+    display: hidden;
+    overflow:auto; 
+}*/
