--- a/src/app/reviewee/reviewee.component.scss
+++ b/src/app/reviewee/reviewee.component.scss
@@ -69,3 +69,67 @@
     mat-card-content{
         margin-left: 0%;
     }
+
+    #reviewHoursForm{
+        background:#004d40;
+        height: 45%;
+        width: 40%; 
+        position: absolute; 
+        margin-left: 5%;
+        width: 90%;
+        background-color: #004d40;
+        overflow: hidden;
+    }
+    
+    #hoursFormBox{
+        display: flex;
+        flex-direction: column;
+        flex:1;
+        height: 50%;
+        width: 100%;
+        margin-left: 10%;
+        margin-top: 2%;
+    
+    }
+    
+    #hoursForm{
+        display: flex;
+        flex-direction: row;
+        flex:1;
+        padding: 5%;
+        margin-top: -2%;
+        background: white;
+        height: 70%;
+        width: 75%;
+        margin-left: -3%;
+    }
+    
+    #reviewHoursForm h1{
+        color: white;
+    }
+    
+    .mat-button{
+       margin-right: 6%;
+       float: left;
+       cursor: pointer;
+       margin-bottom: 4%;
+       width: 12%;
+       position: absolute;
+       height: 12%;
+    }
+    
+    .mat-form-field{
+        margin-left: 0%;
+    }
+    
+    .mat-radio-group{
+        margin-right: 2%;
+    }
+    
+    .dobContain{
+        margin-left: 2%;
+    }
+    
+    .endTime{
+        margin-left: 5%;
+    }
