update reviewer table animations and reviewee add button

--- a/src/app/reviewee/reviewee.component.html
+++ b/src/app/reviewee/reviewee.component.html
@@ -168,7 +168,7 @@
         </div>
     </div>
 
-    <button mat-icon-button>
+    <button mat-icon-button (click)="requestOpen()">
       <i class="material-icons">
           add
       </i>
