--- a/src/app/reviewer/reviewer.component.html
+++ b/src/app/reviewer/reviewer.component.html
@@ -1,7 +1,7 @@
 <html>
     <h1 id="title">Welcome</h1>
     <div id="cardBox">
-        <mat-card class="reviewer-card" (click)="toggle()">
+        <mat-card class="reviewer-card" (click)="toggleAwait()">
             <mat-card-header>
             <mat-card-content class="numbers">
                 <p><b>5</b></p>
@@ -13,7 +13,7 @@
             </i> 
         </mat-card>
   
-        <mat-card class="reviewer-card" (click)="toggle()">
+        <mat-card class="reviewer-card" (click)="toggleInProg()">
             <mat-card-header>
             <mat-card-content class="numbers">
                 <p><b>4</b></p>
@@ -25,7 +25,7 @@
             </i> 
         </mat-card>
   
-        <mat-card class="reviewer-card" (click)="toggle()">
+        <mat-card class="reviewer-card" (click)="toggleComp()">
             <mat-card-header>
             <mat-card-content class="numbers">
                 <p><b>5</b></p>
@@ -37,7 +37,7 @@
             </i> 
         </mat-card>
 
-        <mat-card class="reviewer-card" (click)="toggle()">
+        <mat-card class="reviewer-card" (click)="toggleReview()">
             <mat-card-header>
             <mat-card-content class="numbers">
                 <p><b>10</b></p>
@@ -50,13 +50,9 @@
         </mat-card>
     </div>
 
-    <button mat-icon-button id="add" >
-        <i class="material-icons">
-            add
-        </i>
-    </button>
 
-    <div id = "awaitingChart" [@openClose]="isOpen ? 'open' : 'closed'">
+    
+    <div id = "awaitingChart" [@openClose]="isOpenAwait ? 'open' : 'closed'">
         <table mat-table [dataSource]="dataSource">
 
             <ng-container matColumnDef="projectName">
@@ -84,7 +80,63 @@
         </table>
     </div>
 
-    <div id = "reviewHoursForm" [@openClose]="isOpen ? 'open' : 'closed'" >
+    <div id = "awaitingChart" [@openClose]="isOpenInProg ? 'open' : 'closed'">
+        <table mat-table [dataSource]="dataSource">
+
+            <ng-container matColumnDef="projectName">
+            <th mat-header-cell *matHeaderCellDef> Project Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="dueDate">
+            <th mat-header-cell *matHeaderCellDef> Due Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="requestTo">
+            <th mat-header-cell *matHeaderCellDef> Request To </th>
+            <td mat-cell *matCellDef="let element"> {{element.requestTo}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="author">
+            <th mat-header-cell *matHeaderCellDef> Author </th>
+            <td mat-cell *matCellDef="let element"> {{element.author}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+
+    <div id = "awaitingChart" [@openClose]="isOpenComp ? 'open' : 'closed'">
+        <table mat-table [dataSource]="dataSource">
+
+            <ng-container matColumnDef="projectName">
+            <th mat-header-cell *matHeaderCellDef> Project Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="dueDate">
+            <th mat-header-cell *matHeaderCellDef> Due Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="requestTo">
+            <th mat-header-cell *matHeaderCellDef> Request To </th>
+            <td mat-cell *matCellDef="let element"> {{element.requestTo}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="author">
+            <th mat-header-cell *matHeaderCellDef> Author </th>
+            <td mat-cell *matCellDef="let element"> {{element.author}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+
+    <div id = "reviewHoursForm" [@openClose]="reviewHours ? 'open' : 'closed'">
         <h1>Add hours from completed code reviews</h1>
         <div id="hoursFormBox">
             <form id ="hoursForm">
