--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,36 +1,47 @@
 <html>
-  <h1 id="title">Welcome</h1>
-  <div id="employeeBox">
+<h1 id="title">Welcome</h1>
+<div id="employeeBox">
 
+  <div id="topOfChart">
     <mat-form-field id="searchBox" appearance="fill">
-      <mat-label>Search</mat-label>
+      <mat-label>Search Data</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. John Smith">
     </mat-form-field>
 
-    <table mat-table [dataSource]="dataSource">
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="role">
-        <th mat-header-cell *matHeaderCellDef> Role </th>
-        <td mat-cell *matCellDef="let element"> {{element.role}} </td>
-      </ng-container>
-    
-      <ng-container matColumnDef="reviewHours">
-        <th mat-header-cell *matHeaderCellDef> Code Review Hours </th>
-        <td mat-cell *matCellDef="let element"> {{element.reviewHours}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="completedReviews">
-        <th mat-header-cell *matHeaderCellDef> Complete Code Reviews </th>
-        <td mat-cell *matCellDef="let element"> {{element.completedReviews}} </td>
-      </ng-container>
-    
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <mat-form-field id="reviewDateSelector" appearance="fill">
+      <mat-label>Date of Review</mat-label>
+      <input matInput name="review-date" [(ngModel)]="reviewDate" [matDatepicker]="datePicker" class="field"
+        maxlength="30" type="text" placeholder="MM/DD/YYYY">
+      <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+      <mat-datepicker #datePicker></mat-datepicker>
+    </mat-form-field>
   </div>
+
+  <table mat-table [dataSource]="dataSource">
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="role">
+      <th mat-header-cell *matHeaderCellDef> Role </th>
+      <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="reviewHours">
+      <th mat-header-cell *matHeaderCellDef> Code Review Hours </th>
+      <td mat-cell *matCellDef="let element"> {{element.reviewHours}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="completedReviews">
+      <th mat-header-cell *matHeaderCellDef> Complete Code Reviews </th>
+      <td mat-cell *matCellDef="let element"> {{element.completedReviews}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
+
 </html>
