--- a/src/app/reviewer/reviewer.component.scss
+++ b/src/app/reviewer/reviewer.component.scss
@@ -137,12 +137,12 @@ button{
     margin-left: 5%;
 }
 
-.feedback{
-    margin-right: -10%;
+.mat-button .feedback{
+    margin-right: 60% !important; 
     float: left;
     cursor: pointer;
-    position: relative;
-    margin-bottom: 15%;
+    
+    margin-bottom: 50%;
     width: 12%;
     height: 12%;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
