--- a/src/app/feedback/feedback.component.scss
+++ b/src/app/feedback/feedback.component.scss
@@ -23,4 +23,12 @@
    margin-right: 24px;
    float: right;
    cursor: pointer;
-  }
+}
+
+#Submit{
+    background: #80CBC4;
+}
+
+#Cancel{
+    background: #004d40;
+}
