--- a/src/app/code-request/code-request.component.html
+++ b/src/app/code-request/code-request.component.html
@@ -1,4 +1,36 @@
-<mat-card class="request-card">
+<h2 mat-dialog-title>Create a Code Review Request</h2>
+<mat-dialog-content>
+    <form class="request-form">
+        <mat-form-field class="box-full-width">
+            <mat-label>Name of Reviewer</mat-label>
+            <input matInput placeholder="John Doe">
+        </mat-form-field>
+
+        <mat-form-field class="completedReviewDate">
+            <input matInput [matDatepicker]="datePicker" class="field" maxlength="30" type="text"
+                placeholder="Date of Review">
+            <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+            <mat-datepicker #datePicker></mat-datepicker>
+        </mat-form-field>
+        
+
+        <mat-form-field class="box-full-width">
+            <mat-label>Tags</mat-label>
+            <input matInput placeholder="SQL, JavaScript, etc...">
+        </mat-form-field>
+
+        <mat-form-field class="box-full-width">
+            <mat-label>Description</mat-label>
+            <input matInput placeholder="What is the purpose of the code?....">
+        </mat-form-field>
+    </form>
+</mat-dialog-content>
+<mat-dialog-actions>
+    <button mat-button mat-dialog-close id="Submit">Submit</button>
+    <button mat-button [mat-dialog-close]="true" id="Cancel">Cancel</button>
+</mat-dialog-actions>
+
+<!-- <mat-card class="request-card">
     <mat-card-header>
         <mat-card-title>Create a Code Review Request </mat-card-title>
     </mat-card-header>
@@ -36,4 +68,4 @@
             </mat-card-actions>
         </div>
     </mat-card-content>
-</mat-card>
+</mat-card> -->
