--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,10 +2,12 @@
   <h1 id="title">Welcome</h1>
   <div id="userBox">
 
-    <mat-form-field id="searchBox" appearance="fill">
-      <mat-label>Search</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. John Smith">
-    </mat-form-field>
+    <div id="topOfTable">
+      <mat-form-field id="searchBox" appearance="fill">
+        <mat-label>Search Users</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. John Smith">
+      </mat-form-field>
+    </div>
 
     <table mat-table [dataSource]="dataSource">
 
