--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -2,7 +2,7 @@
 <h1 id="title">Welcome</h1>
 <div id="employeeBox">
 
-  <div id="topOfChart">
+  <div id="topOfTable">
     <mat-form-field id="searchBox" appearance="fill">
       <mat-label>Search Data</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. John Smith">
