--- a/src/app/manager/manager.component.scss
+++ b/src/app/manager/manager.component.scss
@@ -16,7 +16,7 @@
     margin-left: 2%;
 }
 
-#topOfChart {
+#topOfTable {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
