added timeframe inputs to manager page, might need error handling for invalid dates

--- a/src/app/manager/manager.component.scss
+++ b/src/app/manager/manager.component.scss
@@ -11,7 +11,12 @@
     margin-left: 2%;
 }
 
-#reviewDateSelector {
+#reviewDateTo {
+    position: relative;
+    margin-left: 2%;
+}
+
+#reviewDateFrom {
     position: relative;
     margin-left: 2%;
 }
